--- a/styles/style.css
+++ b/styles/style.css
@@ -108,6 +108,7 @@ label:has(:focus-visible) {
 }
 
 .search-form__textfield {
+  padding: 0;
   width: 225px;
   color: #fff;
   font-family: Fira Sans Condensed;
@@ -173,8 +174,7 @@ label:has(:focus-visible) {
   text-align: center;
   color: #fff;
   cursor: pointer;
-  border-width: 1px;
-  border-color: #ffffff;
+  border: 1px solid #ffffff;
   background-color: #1b1919;
 }
 
@@ -213,14 +213,13 @@ label:has(:focus-visible) {
   position: relative;
   display: flex;
   flex-direction: column;
-  row-gap: 32px;
   height: 298px;
-  overflow: scroll;
-  overflow-x: hidden;
+  overflow: auto;
 }
 
 .content__list-item {
   padding: 1px;
+  margin-bottom: 32px;
 }
 
 .content__list::-webkit-scrollbar {
@@ -251,8 +250,9 @@ label:has(:focus-visible) {
 }
 
 .content__video-card-thumbnail {
-  width: 194px;
+  width: 100%;
   height: 103px;
+  object-fit: cover;
 }
 
 .content__video-card-description-container {
@@ -307,7 +307,7 @@ label:has(:focus-visible) {
 }
 
 .result__video {
-  position: absolute;
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
