--- a/styles/style.css
+++ b/styles/style.css
@@ -237,7 +237,7 @@ label:has(:focus-visible) {
 }
 
 .content__video-card-title {
-  font-family: Oswald;
+  font-family: "Oswald", sans-serif;
   font-weight: 700;
   font-size: 30px;
   line-height: 30px;
@@ -291,7 +291,7 @@ label:has(:focus-visible) {
 }
 
 .title {
-  font-family: Oswald;
+  font-family: "Oswald", sans-serif;
   margin-bottom: 26px;
   font-weight: 700;
   font-size: 75px;
